refactored tests for CoreService & PaymentService.